[package]
name = "redox-rt"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Libc-independent runtime for Redox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2"
goblin = { version = "0.7", default-features = false, features = ["elf32", "elf64", "endian_fd"] }
plain = "0.2"
ioslice = { version = "0.6", default-features = false }
redox_syscall = "0.7"
redox-path = "0.3.0"

generic-rt = { path = "../generic-rt" }

[features]
proc = []
default = ["proc"]

[lints]
workspace = true
