[package]
name = "dirent"
version = "0.1.0"
authors = ["jD91mZM2 <me@krake.one>"]
build = "build.rs"

[build-dependencies]
cbindgen = { path = "../../cbindgen" }

[dependencies]
errno = { path = "../errno" }
fcntl = { path = "../fcntl" }
platform = { path = "../platform" }
stdio = { path = "../stdio" }
unistd = { path = "../unistd" }
