[package]
name = "platform"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[dependencies.ralloc]
path = "../../ralloc"
default-features = false
optional = true

[target.'cfg(target_os = "linux")'.dependencies]
sc = "0.2"

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.1"
