[package]
name = "stdio"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
build = "build.rs"

[build-dependencies]
cbindgen = { path = "../../cbindgen" }

[dependencies]
errno = { path = "../errno"}
fcntl = { path = "../fcntl" }
lazy_static = { version = "*", features = ["nightly", "spin_no_std"] }
platform = { path = "../platform" }
ralloc = { path = "../../ralloc" }
string = { path = "../string" }
stdlib = { path = "../stdlib" }
va_list = { path = "../../va_list", features = ["no_std"] }
