[package]
name = "stdlib"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
build = "build.rs"

[build-dependencies]
cbindgen = { path = "../../cbindgen" }

[dependencies]
platform = { path = "../platform" }
ctype = { path = "../ctype" }
errno = { path = "../errno" }
rand = { version = "0.5.2", default-features = false }
string = { path = "../string" }
time = { path = "../time" }
unistd = { path = "../unistd" }
wchar = { path = "../wchar" }
fcntl = { path = "../fcntl" }
