[package]
name = "wchar"
version = "0.1.0"
authors = ["Stephan Vedder <stephan.vedder@gmail.com>"]
build = "build.rs"

[build-dependencies]
cbindgen = { path = "../../cbindgen" }

[features]
str_internals = []

[dependencies]
platform = { path = "../platform" }
stdio = { path = "../stdio" }
errno = { path = "../errno" }
time = { path = "../time" }
va_list = { path = "../../va_list", features = ["no_std"] }